--- a/handsOn_Dockerfile/index.html
+++ b/handsOn_Dockerfile/index.html
@@ -33,8 +33,9 @@
         }
 
         p {
-            font-size: 1.2rem;
+            font-size: 1.5rem;
             margin-bottom: 1.5em;
+            color: #2b2727;
         }
     </style>
 </head>
